test/compile_fail/frozen_set_empty_keys.cpp
#include "frozenchars/set.hpp"

auto empty_set = frozenchars::frozen_set<>{};
